# spider-bot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CI.Dockerfile  Cargo.toml  Cross.toml  Dockerfile  Local.Dockerfile  Procfile  README.md  RustConfig  renovate.json
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker-image-cross.yml  docker-image.yml
db/: Cargo.toml
db/.sqlx/: query-1467dd5f88c7002d143fa44e6c48a2caf661fedfa156d47534cfb1e1672c302a.json  query-25285de4df764200a78844e6d0d5126369f374e247e242d7f897f6e83f71aabd.json  query-2be7577bb15089f35e5fc557571f1ff549ef8e8d3f5bddbeb07fd45f0f50f0a3.json  query-3d26fc661d55b9b40bb970911e1243132cc8542d96e6ea07aae8d591677c4172.json  query-7e4fb13c80c3b22e08e1623822add2cc781065792a872dc5b9b134ba6c133a7b.json  query-d99abd4ac771875c08f280083a56c61d57c55540d81547d09049cb60ce3ab574.json  query-e62f35122200478c1556064da1a6b1fcccc0534744b176dd3d74f60f8ee7488a.json  query-feecbaddf9706964f997eefcc47b1a96a551ca6130582087e6107e6e07dbb38e.json
db/migrations/: 20231116201020_anime_index.sql  20250301132433_initialize_user_balance_table.sql
db/queries/: find_subscribed_channels.sql
db/queries/balance/: add_user_balance.sql  create_user_balance.sql  get_top_user_balances.sql  get_user_balance.sql  set_user_balance.sql  upsert_set_user_balance.sql  upsert_update_user_balance.sql
db/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
giphy/: Cargo.toml
giphy/src/: lib.rs  models.rs
igdb/: Cargo.toml
igdb/src/: error.rs  lib.rs  models.rs
igdb/tests/: game_types.rs  games.rs
igdb/tests/common/: mod.rs
kitsu/: Cargo.toml
kitsu/src/: lib.rs
klipy/: Cargo.toml
klipy/src/: error.rs  lib.rs  models.rs
migrations/2021-05-10-185805_create_anime/: down.sql  up.sql
nyaa/: Cargo.toml
nyaa/src/: lib.rs
otaku/: Cargo.toml
otaku/.sqlx/: query-020e53f88972df334763b27eac836cb5b0faa80183b71753ab279a4f0fdac240.json  query-4e6204f423e334cee4f6a6a0f88f98cfbc24cea4053464feede7f86a10a740eb.json  query-91ec031eeda7c292721f8c11f9781f03c5b67d957ea083cb067e2347e7d0c69a.json
otaku/migrations/: 20231025213946_initial_tables.sql
otaku/queries/: find_subscribed_channels.sql
otaku/src/: db.rs  lib.rs
proto/: Cargo.toml  build.rs
proto/protos/: api.v1.proto  api.v2.proto
proto/src/: lib.rs
src/: anime.rs  background_tasks.rs  cache.rs  commands.rs  consts.rs  context.rs  main.rs  messaging.rs  models.rs  nyaa.rs  schema.rs  storage.rs  util.rs
src/commands/: anime.rs  dice.rs  gifs.rs  night.rs  true_coin.rs
src/commands/gifs/: play.rs  sleep.rs
tenor/: Cargo.toml
tenor/src/: lib.rs  models.rs
