[package]
name = "spider-bot"
version = "0.2.3"
authors = ["Stefan Breetveld <spiderbiggen@gmail.com>"]
edition = "2021"
description = "Discord bot for the 'Turtle Force' discord"

[workspace]
members = [
    "tenor",
    "otaku",
    "proto",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
otaku = { path = "otaku" }
tenor = { path = "tenor" }

async-trait = "0.1.80"
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
envmnt = "0.10.4"
futures = "0.3.21"
poise = "0.6.1"
rand = "0.8.5"
thiserror = "1.0.63"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
itertools = "0.13.0"
url = "2.5.2"

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend"
]

[dependencies.tokio]
version = "1.40.0"
features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time"
]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
