[package]
name = "spider-bot"
version = "0.3.4-alpha05"
authors = ["Stefan Breetveld <spiderbiggen@gmail.com>"]
edition = "2024"
description = "Discord bot for the 'Turtle Force' discord"

[workspace]
members = ["db", "domain", "otaku", "proto", "tenor"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
single_match_else = "allow"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[workspace.dependencies]
chrono = "0.4.38"
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1.37"
url = "2.5.2"

[dependencies]
db = { path = "db" }
domain = { path = "domain" }
otaku = { path = "otaku" }
tenor = { path = "tenor" }

anyhow = "1.0.86"
chrono = { workspace = true }
dotenv = "0.15.0"
envmnt = "0.10.4"
futures = "0.3.21"
poise = "0.6.1"
rand = "0.9.0"
rustrict = "0.7.31"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { workspace = true }

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend"
]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
