[package]
name = "giphy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json", "gzip", "brotli"] }
serde = { version = "^1.0.123", features = ["derive"] }
serde_json = "^1.0.64"
url = "^2.2.0"