[package]
name = "klipy"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
const_format = { version = "0.2.35", features = ["fmt"] }
const-fnv1a-hash = "1.1.0"

itertools = "0.14.0"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli"] }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
