[package]
name = "nyaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
futures = "^0.3"
regex = "1"
reqwest = { version = "^0.11", features = ["json", "gzip", "brotli"] }
rss = "2"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
thiserror = "1"
url = "2"