[package]
name = "otaku"
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
proto = { path = "../proto" }

chrono = "0.4.38"
futures-util = "0.3.28"
prost-types = "0.13.2"
thiserror = "2.0.0"
tokio = "1"
tonic = { version = "0.12.2", features = ["gzip"] }
tracing = "0.1.40"

[dependencies.sqlx]
version = "0.8.1"
features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"]
