[package]
name = "otaku"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
proto = { path = "../proto" }
domain = { path = "../domain" }
db = { path = "../db" }

chrono = { workspace = true }
futures-util = "0.3.28"
prost-types = "0.13.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.12.2", features = ["gzip"] }
tracing = { workspace = true }

