[package]
name = "otaku"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
proto = { path = "../proto" }
domain = { path = "../domain" }
db = { path = "../db" }

thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.14.0", features = ["gzip"] }
tracing = { workspace = true }

