[package]
name = "proto"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

chrono = { workspace = true }
tonic = { version = "0.12.2", default-features = false, features = ["codegen"] }
thiserror = { workspace = true }
prost = "0.13.2"
prost-types = "0.13.2"

[build-dependencies]
tonic-build = "0.12.2"
