[package]
name = "proto"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

chrono = { workspace = true }
tonic = { version = "0.13.0", default-features = false, features = ["codegen"] }
thiserror = { workspace = true }
prost = "0.14.0"
prost-types = "0.14.0"

[build-dependencies]
tonic-build = "0.13.0"
