[package]
name = "proto"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

chrono = { workspace = true }
tonic = { version = "0.14.0", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.0"
thiserror = { workspace = true }
prost = "0.14.0"
prost-types = "0.14.0"

[build-dependencies]
tonic-prost-build = "0.14.0"
