[package]
name = "tenor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
itertools = "0.12.1"
reqwest = { version = "0.11.25", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.57"
tracing = "0.1.37"
url = { version = "2.4.1", features = ["serde"] }
