[package]
name = "tenor"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
itertools = "0.13.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.0"
url = { version = "2.5.2", features = ["serde"] }
