[package]
name = "tenor"
version = "0.2.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
itertools = "0.14.0"
reqwest = { version = "0.13", features = ["json", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
